Framework: one composition for combining filters, shared by ?filter and the ACL read filter